EXTRA_DIST = autogen.sh 
ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = @NS_ALLINONE_DISTCHECK_CONFIGURE_FLAGS@ @NSMIRACLE_DISTCHECK_CONFIGURE_FLAGS@

SUBDIRS = m4\
		Utilities/Sunset_Debug \
		Utilities/Sunset_Trace \
		Utilities/Sunset_Utilities \
		Utilities/Sunset_Information_Dispatcher \
		Statistics/Sunset_Statistics \
		General/Sunset_Common_Header \
		General/Sunset_Module \
		General/Sunset_Energy_Model \
		General/Sunset_Queue \
		General/Sunset_Timing \
		General/Sunset_Packet_Error_Model \
		Utilities/Sunset_Position \
		ClMessage/Sunset_Modem2Phy \
		ClMessage/Sunset_Phy2Mac \
		ClMessage/Sunset_Mac2Rtg

	
