EXTRA_DIST = autogen.sh 
ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = @NS_ALLINONE_DISTCHECK_CONFIGURE_FLAGS@ @NSMIRACLE_DISTCHECK_CONFIGURE_FLAGS@ @SUNSET_CORE_DISTCHECK_CONFIGURE_FLAGS@

SUBDIRS = m4\
		Utilities/Sunset_Debug_Emulation \
		Acoustic_Modems/Sunset_Micro_Modem \
		Acoustic_Modems/Sunset_Evologics/Sunset_Evologics_v1_6 \
		Acoustic_Modems/Sunset_Evologics/Sunset_Evologics_v1_4	
