EXTRA_DIST = autogen.sh 
ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = @NS_ALLINONE_DISTCHECK_CONFIGURE_FLAGS@ @NSMIRACLE_DISTCHECK_CONFIGURE_FLAGS@ @SUNSET_CORE_DISTCHECK_CONFIGURE_FLAGS@

SUBDIRS = m4\
		Application/Sunset_Agent \
		Datalink/Sunset_Mac \
		Datalink/Sunset_Aloha \
		Datalink/Sunset_Csma_Aloha \
		Datalink/Sunset_SlottedCsma \
		Datalink/Sunset_Tdma \
		Transport/Sunset_Transport \
		Network/Sunset_Routing \
		Network/Sunset_Static_Routing \
		Network/Sunset_Flooding \
		Phy/Sunset_Phy \
		Phy/Sunset_Phy_Uw/Sunset_Phy_Bellhop \
		Phy/Sunset_Phy_Uw/Sunset_Phy_Urick \
		Addon/Statistics/Sunset_Protocols_Statistics
