EXTRA_DIST = autogen.sh 
ACLOCAL_AMFLAGS = -I m4
DISTCHECK_CONFIGURE_FLAGS = @NS_ALLINONE_DISTCHECK_CONFIGURE_FLAGS@ @NSMIRACLE_DISTCHECK_CONFIGURE_FLAGS@ @SUNSET_CORE_DISTCHECK_CONFIGURE_FLAGS@

SUBDIRS = m4\
		Application/Sunset_Agent_Pkt_Converter \
		Application/Sunset_Cbr_Pkt_Converter \
		Datalink/Sunset_Mac_Pkt_Converter \
		Network/Sunset_Routing_Pkt_Converter \
		Phy/Sunset_Phy_Pkt_Converter
